# open-amp

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: CMakeLists.txt  Makefile  Makefile.common
apps/common/system/baremetal/machine/zynq7/: platform_info.c
apps/common/system/baremetal/machine/zynqmp_r5/: platform_info.c
apps/common/system/generic/machine/: CMakeLists.txt
apps/common/system/generic/machine/zynq7/: CMakeLists.txt
apps/common/system/generic/machine/zynq7/master/: platform_info.c
apps/common/system/generic/machine/zynqmp-r5/remote/: CMakeLists.txt  platform_info.c
apps/common/system/generic/machine/zynqmp_r5/: rsc_table.c
apps/common/system/linux/kernelspace/: README
apps/echo_test/: CMakeLists.txt
apps/echo_test/system/generic/master/: CMakeLists.txt
apps/echo_test/system/generic/remote/: CMakeLists.txt
apps/echo_test/system/linux/: README
apps/func_test_suite/: CMakeLists.txt
apps/func_test_suite/system/generic/: CMakeLists.txt
apps/func_test_suite/system/generic/master/: CMakeLists.txt
apps/func_test_suite/system/generic/remote/: CMakeLists.txt
apps/linux-firmware/machine/: CMakeLists.txt
apps/linux-firmware/machine/zynq7/: CMakeLists.txt
apps/linux_firmware_remoteproc_slave/: rsc_table.c
apps/matrix_multiply/: CMakeLists.txt
apps/matrix_multiply/system/generic/master/: CMakeLists.txt
apps/matrix_multiply/system/generic/remote/: CMakeLists.txt
apps/rpc_demo/: CMakeLists.txt  rpc_demo.c
apps/rpc_demo/system/generic/: CMakeLists.txt
apps/rpc_demo/system/generic/remote/: CMakeLists.txt
apps/samples/master/generic/: CMakeLists.txt
apps/samples/master/generic/common/: CMakeLists.txt
apps/samples/master/generic/common/machine/zynq7/: CMakeLists.txt
apps/samples/master/generic/echo_test/: CMakeLists.txt
apps/samples/master/generic/func_test_suite/: CMakeLists.txt
apps/samples/master/generic/linux-firmware/: CMakeLists.txt  boot_wrapper.S
apps/samples/master/generic/matrix_multiply/: CMakeLists.txt  matrix_multiply.c
apps/samples/remote/baremetal/common/machine/zynq7/: rsc_table.c  rsc_table.h
apps/samples/remote/baremetal/common/machine/zynqmp-r5/: rsc_table.c
apps/samples/remote/baremetal/matrix_multiply/: matrix_multiply.c
apps/samples/remote/generic/: CMakeLists.txt
apps/samples/remote/generic/common/machine/zynq7/: CMakeLists.txt
apps/samples/remote/generic/common/machine/zynqmp-r5/: CMakeLists.txt  platform_info.c  rsc_table.h
apps/samples/remote/generic/echo_test/: CMakeLists.txt
apps/samples/remote/generic/func_test_suite/: CMakeLists.txt
apps/samples/remote/generic/matrix_multiply/: CMakeLists.txt
apps/samples/remote/generic/rpc_demo/: CMakeLists.txt  rpc_demo.c
apps/system/generic/machine/zynq7/: CMakeLists.txt  platform_info.c  platform_info_remoteproc_master.c  rsc_table.c  rsc_table.h
apps/system/generic/machine/zynqmp_r5/: CMakeLists.txt  platform_info.c  rsc_table.c  rsc_table.h
apps/tests/master/baremetal/echo_test/: echo_test.c
apps/tests/master/generic/func_test_suite/: func_test_suite.c
apps/tests/remote/baremetal/echo_test/: echo_test.c
apps/tests/remote/baremetal/func_test_suite/: func_test_suite.c
cmake/: options.cmake
common/: CMakeLists.txt  llist.c
common/firmware/: CMakeLists.txt  firmware.c  firmware.h
common/hil/: CMakeLists.txt  hil.c
common/llist/: CMakeLists.txt  llist.c
common/shm/: sh_mem.c
docs/apps/echo_test/: README.md
docs/apps/matrix_multiply/: README.md
docs/apps/rpc_demo/: README.md
include/: open_amp.h
include/common/: hil.h
include/common/firmware/: firmware.h
include/common/hil/: hil.h
include/common/shm/: sh_mem.h
include/porting/os/baremetal/machine/zynq7/: platform.h
include/remoteproc/: elf_loader.h  remoteproc.h  remoteproc_loader.h  rsc_table_parser.h
include/rpmsg/: rpmsg.h  rpmsg_core.h
include/virtio/: virtio.h  virtqueue.h
lib/: CMakeLists.txt  Makefile
lib/common/: firmware.c  hil.c  sh_mem.c
lib/include/: open_amp.h
lib/include/common/: firmware.h  sh_mem.h
lib/include/rpmsg/: rpmsg.h  rpmsg_core.h
lib/proxy/: rpmsg_retarget.c
lib/remoteproc/: elf_loader.c  remoteproc.c  rsc_table_parser.c
lib/rpmsg/: remote_device.c  rpmsg.c
lib/system/generic/: bm_env.c
lib/system/generic/machine/zynq7/: CMakeLists.txt
lib/system/generic/machine/zynqmp_r5/: CMakeLists.txt  machine.c  remoteproc_zynqmp.c
lib/virtio/: virtio.c  virtqueue.c
libs/system/zc702evk/baremetal/: baremetal.h
libs/system/zynqMP_r5/baremetal/: baremetal.h
obsolete/: CMakeLists.txt
obsolete/system/generic/machine/zynq7/: CMakeLists.txt
obsolete/system/zc702evk/baremetal/: baremetal.c
obsolete/system/zynq7/generic/: CMakeLists.txt
obsolete/system/zynq7/zc702evk/baremetal/: Makefile.commons
obsolete/system/zynqmp-r5/generic/: CMakeLists.txt
obsolete/system/zynqmp-r5/generic/xil_standalone_lib/: CMakeLists.txt
obsolete/system/zynqmp-r5/zynqMP_r5/baremetal/: Makefile.commons
porting/: CMakeLists.txt
porting/config/: config.h
porting/env/: bm_env.c
porting/machine/zynq7/: CMakeLists.txt
porting/machine/zynq7/remoteproc/: CMakeLists.txt
porting/machine/zynqmp-r5/: CMakeLists.txt  remoteproc_zynqmp_r5.c
porting/os/baremetal/: bm_env.c
porting/os/baremetal/machine/zynq7/: Makefile.platform
porting/system/baremetal/: bm_env.c
porting/system/baremetal/machine/zynq7/: baremetal.c
porting/system/baremetal/machine/zynqmp_r5/: baremetal.c
porting/system/generic/: CMakeLists.txt  bm_env.c
porting/system/generic/machine/zynq7/: machine.c  remoteproc_zynq7.c
porting/system/generic/machine/zynqmp-r5/: CMakeLists.txt  baremetal.c
porting/system/generic/machine/zynqmp_r5/: machine.c  remoteproc_zynqmp.c
porting/zc702evk/: platform.c
porting/zynqMP_r5/: platform.c
proxy/remote/: CMakeLists.txt
proxy/remote/rpmsg_retarget/: rpmsg_retarget.c
remoteproc/: CMakeLists.txt  elf_loader.c  remoteproc.c  remoteproc_loader.c  rsc_table_parser.c
rpmsg/: remote_device.c  rpmsg.c  rpmsg_core.c
virtio/: virtio.c  virtqueue.c
(+1 files in other folders)
